Changes in version: toOrdinal_0.0-3

  o Added support for Swedish (Jeff Erickson).

Changes in version: toOrdinal_0.0-2

  o Added messages indicating language support.
  o Added functionality to convert to ordinal word.

Changes in version: toOrdinal_0.0-1

  o Package Released.