@@ -4,11 +4,11 @@ citEntry(entry = "Manual",
          title        = "{toOrdinal}: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number",
          author       = "Damian W. Betebenner",
          year         = "2015",
-         note         = "R package version 0.0-3",
+         note         = "R package version 0.0-5",
          url          = "https://github.com/CenterForAssessment/toOrdinal",
          
          textVersion  = paste("Damian W. Betebenner (2015).",
                         "toOrdinal: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number",
-                        "(R package version 0.0-3.",
+                        "(R package version 0.0-5.",
                         "URL https://github.com/CenterForAssessment/toOrdinal")
 )
